workshop03/codeserver-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
  labels:
    name: codeserver
