workshop03/codeserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver-svc
  namespace: codeserver
  labels:
    app: codeserver
    name: codeserver-svc
spec:
  type: ClusterIP
  selector:
    app: codeserver
    name: codeserver-deploy
  ports:
  - port: 8443
    targetPort: 8443
